# CodeGenerator

./: .gitignore  README.md
backend/: README.md  pyproject.toml  test_agent_structure.py  test_agent_workflow.py  test_all_phases.py  test_llm_services.py  test_phase4_simple.py  test_phase5_sse.py  test_sandbox.py  test_sandbox_interactive.py
backend/app/: main.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/agents/nodes/: __init__.py  code_generation.py  error_fixing.py  execution.py  optional_test_inference.py  planning.py  validation.py
backend/app/api/routes/: generate.py  models.py  sessions.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: session_service.py
backend/app/services/execution/: process_manager.py  sandbox.py  validators.py
backend/app/services/llm/: anthropic_service.py  base.py  factory.py  openai_service.py  output_parser.py  output_schema.py
backend/app/utils/: streaming.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Chat/: ChatInput.tsx  ChatMessage.tsx  CodeBlock.tsx  FeedbackBanner.tsx  InputBox.tsx  Message.tsx  MessageActions.tsx  MessageList.tsx
frontend/src/components/Code/: CodeBlock.tsx  ExecutionLog.tsx
frontend/src/config/: models.ts
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: api.ts
frontend/src/store/: chatStore.ts
frontend/src/types/: events.ts
(+9 files in other folders)
